@@ -461,6 +461,11 @@ Patch to compile VICE 1.20:
 <a NAME="contact">Contacts
 </h1>
 
+<p>VICE has moved its source repository to public services provided by
+<a href="http://sf.net/">SourceForge</a>. You can find it at <a
+href="http://sf.net/projects/vice-emu">http://sf.net/projects/vice-emu</a>.
+We like to thank the SourceForge staff for that help.</p>
+
 <p>Before contacting us, have a look at the
 <a href="http://vicekb.trikaliotis.net/">VICE knowledge base</a> if your
 question is answered there. Keep in mind
@@ -473,8 +478,13 @@ improve the emulation.</p>
 <ul>
 
 <li>
-Generic questions, bug reports, suggestions etc.: The Vice team
-(<a href="mailto:vice-devel@firenze.linux.it">vice-devel@firenze.linux.it</a>)
+Bug reports, suggestions, support requests should be directed to the
+SourceForge trackers at <a
+	href="http://sourceforge.net/tracker/?group_id=223021">http://sourceforge.net/tracker/?group_id=223021</a>.
+This way, you, the users, and we, the developers, can track what has
+been reported and what has been already fixed. Ideally, also sent the
+report to the mailing address of the Vice team at (<a
+	href="mailto:vice-devel@firenze.linux.it">vice-devel@firenze.linux.it</a>).
 </li>
 
 </ul>
